--- a/notebooks/01_create_database.ipynb
+++ b/notebooks/01_create_database.ipynb
@@ -16,20 +16,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WmSRGJ9R1kTi",
-        "outputId": "20c1a54a-81c4-45e5-8bd0-f8a08cea6d90"
+        "outputId": "bc3ebe67-84f4-403f-d3bd-f980a0f4252a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -49,15 +49,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QfaWlb492CvZ",
-        "outputId": "74e2ca27-7257-41cc-e46a-14905665a684"
+        "outputId": "bcf9ec93-cdd8-43dd-e872-5d702fe98ad9"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/gdrive/MyDrive/Colab Notebooks/housing_fall2025\n"
+            "[Errno 2] No such file or directory: '/content/drive/MyDrive/Colab Notebooks/housing_fall2025'\n",
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Create necessary directories\n",
+        "Path(\"data\").mkdir(parents=True, exist_ok=True)\n",
+        "Path(\"datasets\").mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "print(\"✓ Directories created\")\n",
+        "print(f\"Current directory: {os.getcwd()}\")\n"
+      ],
+      "metadata": {
+        "id": "-mW9DSuRPd7q",
+        "outputId": "92c39dbd-4c9d-485e-8f66-6b9572c63b47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Directories created\n",
+            "Current directory: /content\n"
           ]
         }
       ]
@@ -74,7 +107,7 @@
         "\n",
         "def load_housing_data():\n",
         "    print(\"[1] Checking for housing.tgz…\")\n",
-        "    tarball_path = Path(f\"{base_folder}/data/housing.tgz\")\n",
+        "    tarball_path = Path(\"datasets/housing.tgz\") # Changed from \"data/housing.tgz\"\n",
         "    if not tarball_path.is_file():\n",
         "        print(\"[1a] File not found. Creating datasets/ and downloading dataset…\")\n",
         "        Path(\"datasets\").mkdir(parents=True, exist_ok=True)\n",
@@ -224,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7rUZ8BQ2kYL",
-        "outputId": "22263b6f-bdb4-4ab5-c885-3bac96812bca"
+        "outputId": "e5fcda82-8ff2-49ec-c5b0-eb48bdd601b4"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,21 +272,7 @@
             "[1a] File not found. Creating datasets/ and downloading dataset…\n",
             "[1b] Download completed.\n",
             "[2] Extracting housing.tgz…\n",
-            "[3] Loading housing.csv into DataFrame…\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1553684944.py:20: DeprecationWarning: Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata. Use the filter argument to control this behavior.\n",
-            "  housing_tarball.extractall(path=\"datasets\")\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "[3] Loading housing.csv into DataFrame…\n",
             "Loaded 20640 rows.\n",
             "\n",
             "[STEP 2] Creating surrogate key block_id…\n",
@@ -274,7 +293,21 @@
             "[STEP 7] Inserting data into SQLite database…\n",
             "Inserting ocean_proximity dimension…\n",
             "Inserting block table…\n",
-            "Inserting block_housing_stats…\n",
+            "Inserting block_housing_stats…\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2015760753.py:20: DeprecationWarning: Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata. Use the filter argument to control this behavior.\n",
+            "  housing_tarball.extractall(path=\"datasets\")\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "\n",
             "=== DONE! SQLite DB created at: housing.db ===\n",
             "\n"
